labs/module3_session12_api_design/step4_product_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: product-proxy
    namespace: product
  name: product-api
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: product-api
  type: LoadBalancer
status:
  loadBalancer: {}
