labs/module3_session12_api_design/step4_product_api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: product
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /product/v1
        pathType: Prefix
        backend:
          service:
            name: product-api
            port:
              number: 9090
